[package]
name = "eip-lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
open = "4.1.0"
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["full"] }
